--- a/sparePartsStore/View/ViewSearchSpareParts.xaml
+++ b/sparePartsStore/View/ViewSearchSpareParts.xaml
@@ -9,7 +9,7 @@
       Title="" MinHeight="700" Height="Auto" MinWidth="1200" Width="Auto">
     
     <!--страница посика запчастей-->
-    <Grid Background="White" Margin="50, 0, 50, 0" HorizontalAlignment="Center">
+    <Grid Background="White" Margin="50, 0, 50, 0" HorizontalAlignment="Center" MinWidth="1100">
 
         <!--стили-->
         <Grid.Resources>
@@ -33,7 +33,7 @@
         <TextBlock Grid.Row="0" Grid.Column="0" Text="Поиск запчастей" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,40,0,40" VerticalAlignment="Center"/>
 
         <!--таблица + фильтр-->
-        <Grid Grid.Row="1" Grid.Column="0" Margin="0, 0, 0, 0" HorizontalAlignment="Center">
+        <Grid Grid.Row="1" Grid.Column="0" Margin="0, 0, 0, 0" HorizontalAlignment="Center" MinWidth="1100">
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
