--- a/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListCarBrands.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListCarBrands.xaml
@@ -57,7 +57,8 @@
 
             <TextBox Grid.Row="1" Grid.ColumnSpan="3" x:Name="SearchParts" Height="50" Margin="0,20,0,0"
                          VerticalAlignment="Center" 
-                         Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
+                         Text="{Binding NameBrand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                         TextChanged="TextBoxNameBrand"
                          materialDesign:TextFieldAssist.HasClearButton="True"
                          Style="{StaticResource MaterialDesignOutlinedTextBox}" 
                          materialDesign:HintAssist.Hint="Поиск марки" 
