--- a/sparePartsStore/Dictionary/Dictionary.xaml
+++ b/sparePartsStore/Dictionary/Dictionary.xaml
@@ -51,5 +51,12 @@
         <Setter Property="FontSize" Value="20"/>
     </Style>
 
+    <Style x:Key="DataGridCellStyle" TargetType="DataGridCell">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="BorderBrush" Value="Transparent" />
+        <Setter Property="Margin" Value="20,10,0,0" />
+        <Setter Property="Foreground" Value="Black" />
+    </Style>
+
 
 </ResourceDictionary>
