--- a/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkListModel.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkListModel.xaml
@@ -10,10 +10,26 @@
       Title="" MinHeight="700" Height="Auto" MinWidth="1200" Width="Auto">
 
     <Page.Resources>
-        <local1:ListCarBrandViewModel x:Key="ListCarBrandViewModel"/>
+        <local1:ListCarModelViewModel x:Key="ListCarModelViewModel"/>
+
+        <!--анимация при некорректом вводе-->
+        <Storyboard x:Key="FocusAnimation">
+            <ColorAnimation Storyboard.TargetProperty="Background.(SolidColorBrush.Color)"
+                    From="#de6d6d" To="Transparent" Duration="0:0:3" AutoReverse="False"/>
+        </Storyboard>
+        <!--переопределяем анимацию подсветки textBox при наведении-->
+        <Style x:Key="CustomFilledTextBox" BasedOn="{StaticResource MaterialDesignFilledTextBox}" TargetType="TextBox">
+            <Style.Triggers>
+                <Trigger Property="IsFocused" Value="True">
+                    <Trigger.EnterActions>
+                        <BeginStoryboard Storyboard="{StaticResource FocusAnimation}"/>
+                    </Trigger.EnterActions>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
     </Page.Resources>
 
-    <Grid Background="White" Margin="50,0,50,0" DataContext="{StaticResource ListCarBrandViewModel}">
+    <Grid Background="White" Margin="50,0,50,0" DataContext="{StaticResource ListCarModelViewModel}">
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -35,7 +51,7 @@
 
             <!-- Верхняя часть экрана -->
             <Grid HorizontalAlignment="Left" VerticalAlignment="Top">
-                <Button Content="Домой" Margin="50, 4, 0, 0" Padding="-20, -3, 0, 0" Width="100" Command="{Binding ClosePageAddOrDeleteCarBrands}"  Background="Gray" BorderBrush="Black"/>
+                <Button Content="Домой" Margin="50, 4, 0, 0" Padding="-20, -3, 0, 0" Width="100" Command="{Binding ClosePageAddOrDeleteCarBrands}" Click="ClosePageAddOrDeleteCarModel"  Background="Gray" BorderBrush="Black"/>
                 <materialDesign:PackIcon Kind="Home" Margin="120, 10, 0, 0" Width="20" Height="20"/>
             </Grid>
 
@@ -44,16 +60,21 @@
         <!--название-->
         <TextBlock Grid.Row="0" Grid.Column="0" Text="Модель" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,80,0,40" VerticalAlignment="Center" HorizontalAlignment="Center"/>
 
+        <!--поле для вывода ошибок-->
+        <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right" Margin="0,50,20,0" x:Name="errorInput" FontWeight="DemiBold" FontSize="24">
+
+        </TextBlock>
+
         <!--поле для выбора данных-->
         <ComboBox Grid.Column="0" Grid.Row="1"
-            Width="320" Margin="10,0,0,0"
+            Width="320" Margin="0,0,0,0" x:Name="CbCarModel" DisplayMemberPath="NameCarBrand"
             materialDesign:HintAssist.Hint="Выберите марку" IsEditable="True"
             Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
 
         <!--поля для ввода данных-->
-        <TextBox Grid.Row="2" Grid.Column="0" x:Name="SearchParts" Height="50" Margin="0,30,0,0"
+        <TextBox Grid.Row="2" Grid.Column="0" x:Name="nameModelCar" Height="50" Margin="0,30,0,0"
              VerticalAlignment="Center" HorizontalAlignment="Center"
-             Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
+             Text="{Binding OutNameModel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"   
              materialDesign:TextFieldAssist.HasClearButton="True"
              Style="{StaticResource MaterialDesignOutlinedTextBox}" 
              materialDesign:HintAssist.Hint="Введите название модели" 
@@ -70,7 +91,7 @@
             </Grid.ColumnDefinitions>
 
             <Button Grid.Row="0" Grid.Column="0" Content="Отмена" Width="150" Height="35" Background="Gray" BorderBrush="Black"/>
-            <Button Grid.Row="0" Grid.Column="1" Content="Добавить" x:Name="RenameButtonBrand" Width="150" Height="35" Background="Gray" BorderBrush="Black" Margin="20,0,0,0"/>
+            <Button Grid.Row="0" Grid.Column="1" Content="Добавить" x:Name="RenameButtonBrand" Width="150" Height="35" Background="Gray" BorderBrush="Black" Margin="20,0,0,0" Click="SaveData"/>
 
         </Grid>
 
