--- a/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListCarModels.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListCarModels.xaml
@@ -56,7 +56,7 @@
 
                 <Button Grid.Row="0" Grid.Column="0" Content="Добавить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Click="AddCarModel"/>
                 <Button Grid.Row="0" Grid.Column="1" Content="Редктировать" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0" Command="{Binding EditCarModel}" Click="EditCarModel" IsEnabled="{Binding IsWorkButtonEnable}"/>
-                <Button Grid.Row="0" Grid.Column="2" Content="Удалить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0" Command="{Binding DeleteCarModel}" IsEnabled="{Binding IsWorkButtonEnable}"/>
+                <Button Grid.Row="0" Grid.Column="2" Content="Удалить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0" Command="{Binding DeleteCarModel}" IsEnabled="{Binding IsWorkButtonEnable}" Click="Btn_OpenPopup"/>
 
             </Grid>
             
@@ -64,7 +64,8 @@
             <Grid Grid.Row="0" Grid.Column="1">
                 <TextBox Grid.Row="1" Grid.ColumnSpan="3" x:Name="SearchParts" Height="50" Margin="0,0,0,0"
                          VerticalAlignment="Center"  HorizontalAlignment="Right"
-                         Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
+                         Text="{Binding NameModel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                         TextChanged="TextBoxNameModel"
                          materialDesign:TextFieldAssist.HasClearButton="True"
                          Style="{StaticResource MaterialDesignOutlinedTextBox}" 
                          materialDesign:HintAssist.Hint="Поиск модели" 
@@ -93,6 +94,60 @@
                 </ScrollViewer>
             </Grid>
 
+            <!--фон для Popup-->
+            <Border Grid.ColumnSpan="4" Grid.RowSpan="5" x:Name="DarkBackground" Background="#80000000" Visibility="Collapsed" MouseLeftButtonDown="DarkBackground_MouseDown" Panel.ZIndex="1" Margin="-500,-900,-900,-500"></Border>
+
+            <!-- размещение Popup относительно данного grid-->
+            <Grid x:Name="positionPopup" Grid.RowSpan="2" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <!--Popup-->
+
+            <Grid>
+                <Popup x:Name="DeletePopup" PlacementTarget="{Binding ElementName=positionPopup}" Placement="Center" Grid.ColumnSpan="3" Grid.RowSpan="3" HorizontalOffset="0" VerticalOffset="60" StaysOpen="False" Closed="MyPopup_Closed" AllowsTransparency="False" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Grid Background="Gray">
+                        <!--фон-->
+                        <Border Background="AliceBlue" Style="{StaticResource OutlineOfPopup}" >
+                            <Grid Width="400" Height="250">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
+
+                                    <TextBlock Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Text="Удаление данных" Margin="0, 10, 0, 0" FontSize="30" FontWeight="Bold"/>
+
+                                    <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" VerticalAlignment="Center" Height="130" Margin="10,20,10,0">
+                                        <TextBlock Text="Вы действительно хоти удалить?" FontSize="20" FontWeight="DemiBold" HorizontalAlignment="Center"/>
+                                        <TextBlock Text="{Binding DeleteNameCarBrand}" TextWrapping="Wrap" x:Name="DeleteNameCarBrand" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,30,0,0"  FontSize="20" FontWeight="DemiBold"/>
+                                    </StackPanel>
+
+                                    <Grid Grid.Row="2" Grid.Column="0" Margin="0,0,0,0" VerticalAlignment="Bottom">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="*"/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto"/>
+                                        </Grid.RowDefinitions>
+
+                                        <Button Grid.Row="0" Grid.Column="0" Content="Отмена" Width="150" Height="35" Background="Gray" BorderBrush="Black" Click="closePopup"/>
+                                        <Button Grid.Row="0" Grid.Column="1" Content="Удалить" Width="150" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0" Click="Btn_DeleteData"/>
+
+                                    </Grid>
+
+                                </Grid>
+                            </Grid>
+                        </Border>
+                    </Grid>
+                </Popup>
+            </Grid>
+
+            
         </Grid>
 
     </Grid>
