--- a/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkListModel.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkListModel.xaml
@@ -5,13 +5,13 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:sparePartsStore.View.ViewAdministrator.ViewWorking"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-      xmlns:local1="clr-namespace:sparePartsStore.ViewModel"
+      xmlns:ViewModel="clr-namespace:sparePartsStore.ViewModel"
       mc:Ignorable="d" 
       Title="" MinHeight="700" Height="Auto" MinWidth="1200" Width="Auto">
 
     <Page.Resources>
-        <local1:ListCarModelViewModel x:Key="ListCarModelViewModel"/>
-
+        <ViewModel:ListCarModelViewModel x:Key="ListCarModelViewModel"/>
+        
         <!--анимация при некорректом вводе-->
         <Storyboard x:Key="FocusAnimation">
             <ColorAnimation Storyboard.TargetProperty="Background.(SolidColorBrush.Color)"
@@ -29,6 +29,7 @@
         </Style>
     </Page.Resources>
 
+    <!--модели авто-->
     <Grid Background="White" Margin="50,0,50,0" DataContext="{StaticResource ListCarModelViewModel}">
 
         <Grid.ColumnDefinitions>
