--- a/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkUnit.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkUnit.xaml
@@ -47,8 +47,8 @@
         <TextBlock Grid.Row="0" Grid.Column="0" Text="Агрегат" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,80,0,40" VerticalAlignment="Center" HorizontalAlignment="Center"/>
 
         <!--поле для вывода ошибок-->
-        <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right" Margin="0,50,20,0" x:Name="errorInput" FontWeight="DemiBold" FontSize="24">
-        
+        <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right" Margin="0,50,20,0" x:Name="errorInput" FontWeight="DemiBold" FontSize="24"/>
+
         <!--возврат на главную-->
         <Grid  Grid.Row="0" Grid.Column="0" Visibility="Visible" x:Name="closeFrame" Margin="0,0,0,40">
             <Grid.RowDefinitions>
@@ -88,4 +88,5 @@
         </Grid>
 
     </Grid>
+        
 </Page>
