--- a/sparePartsStore/View/ViewAdministrator/ViewMainPages/PageMainHead.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewMainPages/PageMainHead.xaml
@@ -113,7 +113,7 @@
                 <Button Content="Поиск запчастей" Grid.Column="0" Style="{StaticResource BtnMenuHead}" Command="{Binding Btn_SearchParts, Source={StaticResource MainHeadViewModel}}"/>
                 <Button Content="Марка" Grid.Column="1" Style="{StaticResource BtnMenuHead}" Command="{Binding Btn_CarBrand, Source={StaticResource MainHeadViewModel}}"/>
                 <Button Content="Модель" Grid.Column="2" Style="{StaticResource BtnMenuHead}" Click="Btn_carModel" Command="{Binding Btn_carModel, Source={StaticResource MainHeadViewModel}}"/>
-                <Button Content="Агрегат" Grid.Column="3" Style="{StaticResource BtnMenuHead}" Click="Btn_Unit"/>
+                <Button Content="Агрегат" Grid.Column="3" Style="{StaticResource BtnMenuHead}" Click="Btn_Unit" Command="{Binding Btn_unit, Source={StaticResource MainHeadViewModel}}"/>
                 <Button Content="Узел" Grid.Column="4" Style="{StaticResource BtnMenuHead}" Click="Btn_Knot"/>
                 <Button Content="Запчасть" Grid.Column="5" Style="{StaticResource BtnMenuHead}" Click="Btn_Details"/>
                 <Button Content="Страна" Grid.Column="6" Style="{StaticResource BtnMenuHead}" Click="Btn_Country"/>
