--- a/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListKnot.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListKnot.xaml
@@ -5,11 +5,16 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:sparePartsStore.View.ViewAdministrator.ViewWorkingWithData"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      xmlns:ViewModel="clr-namespace:sparePartsStore.ViewModel"
       mc:Ignorable="d" 
       Title="" MinHeight="700" Height="Auto" MinWidth="1200" Width="Auto">
 
+    <Page.Resources>
+        <ViewModel:ListKnotViewModel x:Key="ListKnotViewModel"/>
+    </Page.Resources>
+
     <!--узел-->
-    <Grid Background="White" Margin="50,0,50,0">
+    <Grid Background="White" Margin="50,0,50,0" DataContext="{StaticResource ListKnotViewModel}">
 
         <!--стили-->
         <Grid.Resources>
@@ -26,7 +31,9 @@
         </Grid.RowDefinitions>
 
         <!--Список узлов автомобиля-->
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="Список узлов автомобиля" FontSize="30" Foreground="Black" FontWeight="DemiBold" HorizontalAlignment="Left" Margin="0,40,0,40" VerticalAlignment="Center"/>
+        <TextBlock Grid.Row="0" Grid.Column="0" Text="Список узлов автомобиля" 
+                   FontSize="30" Foreground="Black" FontWeight="DemiBold" HorizontalAlignment="Left" 
+                   Margin="0,40,0,40" VerticalAlignment="Center"/>
 
         <!--кнопки и таблица-->
         <Grid Grid.Row="1">
@@ -50,9 +57,9 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Button Grid.Row="0" Grid.Column="0" Content="Добавить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black"/>
-                <Button Grid.Row="0" Grid.Column="1" Content="Редктировать" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0"/>
-                <Button Grid.Row="0" Grid.Column="2" Content="Удалить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0"/>
+                <Button Grid.Row="0" Grid.Column="0" Content="Добавить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Click="Btn_AddKnot"/>
+                <Button Grid.Row="0" Grid.Column="1" Content="Редктировать" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0" Command="{Binding EditKnot}" Click="Btn_EditKnot" IsEnabled="{Binding IsWorkButtonEnable}"/>
+                <Button Grid.Row="0" Grid.Column="2" Content="Удалить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0" Command="{Binding DeleteKnot}" Click="Btn_OpenPopup" IsEnabled="{Binding IsWorkButtonEnable}"/>
 
             </Grid>
 
@@ -60,7 +67,8 @@
             <Grid Grid.Row="0" Grid.Column="1">
                 <TextBox Grid.Row="1" Grid.ColumnSpan="3" x:Name="SearchParts" Height="50" Margin="0,0,0,0"
                         VerticalAlignment="Center"  HorizontalAlignment="Right"
-                        Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
+                        Text="{Binding NameKnot, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                        TextChanged="TextBoxNameKnot"
                         materialDesign:TextFieldAssist.HasClearButton="True"
                         Style="{StaticResource MaterialDesignOutlinedTextBox}" 
                         materialDesign:HintAssist.Hint="Поиск узла" 
@@ -70,18 +78,76 @@
 
             <!--таблица-->
             <Grid Grid.Row="1" Grid.ColumnSpan="2" Margin="0,40,0,0" MinWidth="0">
-                <DataGrid
-               HorizontalAlignment="Center"
-               AutoGenerateColumns="False"
-               Style="{StaticResource MaterialDesignDataGrid}"
-               ColumnHeaderStyle="{StaticResource columnTable}">
+                <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+                    <DataGrid IsReadOnly="True"
+                    HorizontalAlignment="Center" RowHeight="50" FontSize="18"
+                    AutoGenerateColumns="False"
+                    CellStyle="{StaticResource DataGridCellStyle}"
+                    ItemsSource="{Binding ListKnotDPO}"
+                    SelectedItem="{Binding SelectedKnot}"
+                    Style="{StaticResource MaterialDesignDataGrid}"
+                    ColumnHeaderStyle="{StaticResource columnTableHeader}">
 
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Узел" Binding="{Binding numberParts}" Width="*"/>
-                        <DataGridTextColumn Header="Агрегат" Binding="{Binding numberParts}" Width="*"/>
+                            <DataGridTextColumn Header="Узел" Binding="{Binding NameKnot}" Width="*" IsReadOnly="True"/>
+                            <DataGridTextColumn Header="Агрегат" Binding="{Binding NameUnit}" Width="*" IsReadOnly="True"/>
                     </DataGrid.Columns>
 
-                </DataGrid>
+                    </DataGrid>
+                </ScrollViewer>
+            </Grid>
+
+            <!--фон для Popup-->
+            <Border Grid.ColumnSpan="4" Grid.RowSpan="5" x:Name="DarkBackground" Background="#80000000" Visibility="Collapsed" MouseLeftButtonDown="DarkBackground_MouseDown" Panel.ZIndex="1" Margin="-500,-900,-900,-500"></Border>
+
+            <!-- размещение Popup относительно данного grid-->
+            <Grid x:Name="positionPopup" Grid.RowSpan="2" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <!--Popup-->
+
+            <Grid>
+                <Popup x:Name="DeletePopup" PlacementTarget="{Binding ElementName=positionPopup}" Placement="Center" Grid.ColumnSpan="3" Grid.RowSpan="3" HorizontalOffset="0" VerticalOffset="60" StaysOpen="False" Closed="MyPopup_Closed" AllowsTransparency="False" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Grid Background="Gray">
+                        <!--фон-->
+                        <Border Background="AliceBlue" Style="{StaticResource OutlineOfPopup}" >
+                            <Grid Width="400" Height="250">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
+
+                                    <TextBlock Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Text="Удаление данных" Margin="0, 10, 0, 0" FontSize="30" FontWeight="Bold"/>
+
+                                    <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" VerticalAlignment="Center" Height="130" Margin="10,20,10,0">
+                                        <TextBlock Text="Вы действительно хоти удалить?" FontSize="20" FontWeight="DemiBold" HorizontalAlignment="Center"/>
+                                        <TextBlock Text="{Binding DeleteNameKnot}" TextWrapping="Wrap" x:Name="DeleteNameKnot" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,30,0,0"  FontSize="20" FontWeight="DemiBold"/>
+                                    </StackPanel>
+
+                                    <Grid Grid.Row="2" Grid.Column="0" Margin="0,0,0,0" VerticalAlignment="Bottom">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="*"/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto"/>
+                                        </Grid.RowDefinitions>
+
+                                        <Button Grid.Row="0" Grid.Column="0" Content="Отмена" Width="150" Height="35" Background="Gray" BorderBrush="Black" Click="closePopup"/>
+                                        <Button Grid.Row="0" Grid.Column="1" Content="Удалить" Width="150" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0" Click="Btn_DeleteData"/>
+
+                                    </Grid>
+
+                                </Grid>
+                            </Grid>
+                        </Border>
+                    </Grid>
+                </Popup>
             </Grid>
 
         </Grid>
