--- a/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkKnot.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkKnot.xaml
@@ -67,7 +67,7 @@
         <!--поле для выбора данных-->
         <ComboBox Grid.Column="0" Grid.Row="1"
             SelectedItem="{Binding SelectedUnit, Mode=TwoWay}"
-            Width="320" Margin="10,0,0,0" x:Name="CbUnit" DisplayMemberPath="NameUnit"
+            Width="320" Margin="0,0,0,0" x:Name="CbUnit" DisplayMemberPath="NameUnit"
             materialDesign:HintAssist.Hint="Выберите агрегат" IsEditable="True"
             Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
 
@@ -90,7 +90,7 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Row="0" Grid.Column="0" Content="Отмена" Width="150" Height="35" Background="Gray" BorderBrush="Black"/>
+            <Button Grid.Row="0" Grid.Column="0" Content="Отмена" Width="150" Height="35" Background="Gray" BorderBrush="Black" Click="ClosePageAddOrDeleteKnot"/>
             <Button Grid.Row="0" Grid.Column="1" Content="Добавить" x:Name="RenameButtonBrand" Width="150" Height="35" Background="Gray" BorderBrush="Black" Margin="20,0,0,0" Click="SaveData"/>
 
         </Grid>
